# rtbxegen

./: .gitignore  Makefile.am  config.h  config.h.in  config.status  configure  configure.ac
examples/: Makefile.am  TestHttpServer.cpp  TestRequestHandler.cpp  TestRequestHandler.h  TestRequestRecorder.h  hello_world  hello_world.cpp  mock_http_server
examples/tests/: Makefile.am  MockHttpServerTest.cpp
lib/: Makefile.am
lib/common/: Makefile.am  json.cpp  json.h
lib/openrtb/: Makefile.am  openrtb.cpp  openrtb.h
lib/openrtb/tests/: Makefile.am  openrtb_test.cpp
lib/proxygen/: Makefile.am  rejection_request_handler.cpp  rejection_request_handler.h
src/: EchoServer.cpp  Makefile.am  myecho
src/exchanges/: Makefile.am  adx_request_handler.cpp  adx_request_handler.h  exchange_request_handler.cpp  exchange_request_handler.h  openrtb.pb.cc  openrtb.pb.h  openrtb.proto  openrtb_request_handler.cpp  openrtb_request_handler.h  realtime-bidding.pb.cc  realtime-bidding.pb.h  rtbxegen_exchange_runner.cpp  smaato_request_handler.cpp  smaato_request_handler.h
test/: Makefile.am  hello_test.cpp
tests/: HelloTest.cpp  Makefile.am  hello_test
